Fix CSS to ensure that multiple selection widgets are visible

--- a/archetypes/querywidget/querywidget.css
+++ b/archetypes/querywidget/querywidget.css
@@ -66,7 +66,6 @@ dl.multipleSelectionWidget,
     width: 198px;
     height: 1.5em;
     overflow: hidden;
-    display:none;
 }
 .multipleSelectionWidget dd {
     width: 198px;
